--- a/DebuggerEventListener/ToolWindow1Control.xaml
+++ b/DebuggerEventListener/ToolWindow1Control.xaml
@@ -4,18 +4,21 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:vsshell="clr-namespace:Microsoft.VisualStudio.Shell;assembly=Microsoft.VisualStudio.Shell.15.0"
-             xmlns:graphViewerGdi="clr-namespace:Microsoft.Msagl.GraphViewerGdi;assembly=Microsoft.Msagl.GraphViewerGdi"
-             Background="{DynamicResource {x:Static vsshell:VsBrushes.WindowKey}}"
-             Foreground="{DynamicResource {x:Static vsshell:VsBrushes.WindowTextKey}}"
+             xmlns:debuggerEventListener="clr-namespace:DebuggerEventListener"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300"
-             Name="MyToolWindow">
+             Name="MyToolWindow"
+             xmlns:mcl="clr-namespace:Microsoft.Msagl.GraphViewerGdi;assembly=Microsoft.Msagl.GraphViewerGdi">
     <Grid>
         <StackPanel Orientation="Vertical">
-            <TextBlock Margin="10" HorizontalAlignment="Center">ToolWindow1</TextBlock>
+            <TextBlock Margin="10" HorizontalAlignment="Center">Dfs</TextBlock>
             <ListBox x:Name="listBox" Height="100"/>
-            <Control x:Name="control" Height="100"/>
-           
-</StackPanel>
+            <ContentControl>
+                <ContentControl.Content>
+                    <Binding Path="(debuggerEventListener:ToolWindow1Control.MyWindowsFormsHost)" UpdateSourceTrigger="PropertyChanged" PresentationTraceSources.TraceLevel="High"
+                             Mode="TwoWay"/>
+                </ContentControl.Content>
+            </ContentControl>
+        </StackPanel>
     </Grid>
 </UserControl>
